// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`initial state 1`] = `
Object {
  "breadcrumbBar": Object {
    "currentPage": null,
    "isLoadingResources": false,
    "isSwitcherOpen": false,
    "pages": null,
    "requestError": null,
    "resourceSwitcherItems": Array [],
  },
}
`;

exports[`switcher after next page 1`] = `
Object {
  "action": Array [
    Array [
      Object {
        "payload": Object {
          "items": Array [
            Object {
              "name": "name-1",
              "url": "some/url/1",
            },
            Object {
              "name": "name-2",
              "url": "some/url/2",
            },
            Object {
              "name": "name-3",
              "url": "some/url/3",
            },
          ],
          "page": 2,
          "pages": 1.5,
        },
        "type": "BREADCRUMB_BAR_RESOURCES_SUCCESS",
      },
    ],
  ],
  "state": Object {
    "breadcrumbBar": Object {
      "currentPage": 2,
      "isLoadingResources": false,
      "isSwitcherOpen": true,
      "pages": 1.5,
      "requestError": null,
      "resourceSwitcherItems": Array [
        Object {
          "name": "name-1",
          "url": "some/url/1",
        },
        Object {
          "name": "name-2",
          "url": "some/url/2",
        },
        Object {
          "name": "name-3",
          "url": "some/url/3",
        },
      ],
    },
  },
}
`;

exports[`switcher after prev page 1`] = `
Object {
  "action": Array [
    Array [
      Object {
        "payload": Object {
          "items": Array [
            Object {
              "name": "name-1",
              "url": "some/url/1",
            },
            Object {
              "name": "name-2",
              "url": "some/url/2",
            },
            Object {
              "name": "name-3",
              "url": "some/url/3",
            },
          ],
          "page": 1,
          "pages": 1.5,
        },
        "type": "BREADCRUMB_BAR_RESOURCES_SUCCESS",
      },
    ],
  ],
  "state": Object {
    "breadcrumbBar": Object {
      "currentPage": 1,
      "isLoadingResources": false,
      "isSwitcherOpen": true,
      "pages": 1.5,
      "requestError": null,
      "resourceSwitcherItems": Array [
        Object {
          "name": "name-1",
          "url": "some/url/1",
        },
        Object {
          "name": "name-2",
          "url": "some/url/2",
        },
        Object {
          "name": "name-3",
          "url": "some/url/3",
        },
      ],
    },
  },
}
`;

exports[`switcher closed 1`] = `
Object {
  "action": Array [
    Array [
      Object {
        "type": "BREADCRUMB_BAR_TOGGLE_SWITCHER",
      },
    ],
  ],
  "state": Object {
    "breadcrumbBar": Object {
      "currentPage": 1,
      "isLoadingResources": false,
      "isSwitcherOpen": false,
      "pages": 1.5,
      "requestError": null,
      "resourceSwitcherItems": Array [
        Object {
          "name": "name-1",
          "url": "some/url/1",
        },
        Object {
          "name": "name-2",
          "url": "some/url/2",
        },
        Object {
          "name": "name-3",
          "url": "some/url/3",
        },
      ],
    },
  },
}
`;

exports[`switcher opened 1`] = `
Object {
  "action": Array [
    Array [
      Object {
        "payload": Object {
          "options": Object {},
          "resource": Object {
            "nameField": "name",
            "resourceUrl": "some/url",
            "switcherItemUrl": "some/url/:id",
          },
        },
        "type": "BREADCRUMB_BAR_RESOURCES_REQUEST",
      },
    ],
  ],
  "state": Object {
    "breadcrumbBar": Object {
      "currentPage": null,
      "isLoadingResources": true,
      "isSwitcherOpen": true,
      "pages": null,
      "requestError": null,
      "resourceSwitcherItems": Array [],
    },
  },
}
`;

exports[`switcher opened and loaded 1`] = `
Object {
  "action": Array [
    Array [
      Object {
        "payload": Object {
          "items": Array [
            Object {
              "name": "name-1",
              "url": "some/url/1",
            },
            Object {
              "name": "name-2",
              "url": "some/url/2",
            },
            Object {
              "name": "name-3",
              "url": "some/url/3",
            },
          ],
          "page": 1,
          "pages": 1.5,
        },
        "type": "BREADCRUMB_BAR_RESOURCES_SUCCESS",
      },
    ],
  ],
  "state": Object {
    "breadcrumbBar": Object {
      "currentPage": 1,
      "isLoadingResources": false,
      "isSwitcherOpen": true,
      "pages": 1.5,
      "requestError": null,
      "resourceSwitcherItems": Array [
        Object {
          "name": "name-1",
          "url": "some/url/1",
        },
        Object {
          "name": "name-2",
          "url": "some/url/2",
        },
        Object {
          "name": "name-3",
          "url": "some/url/3",
        },
      ],
    },
  },
}
`;
